tests/snapshots/integration__integration_tests__jj__jj_list_dirty_workspace.snap
---
source: tests/integration_tests/jj.rs
info:
  program: wt
  args:
    - list
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
  [1mBranch[0m   [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m           [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m   [1mMessage
@ default      [2m^[22m                         .                       [2m[CHANGE_ID_SHORT][0m  [2m⋯[0m     [2m⋯
+ dirty        [2m↑[22m       [32m+1[0m        [32m↑2[0m      ../repo.dirty           [2m[CHANGE_ID_SHORT][0m  [2m⋯[0m     [2m⋯
[2m○[22m [2mShowing 2 worktrees, 1 ahead, 1 column hidden

----- stderr -----
