tests/snapshots/integration__integration_tests__jj__jj_merge_implicit_target.snap
---
source: tests/integration_tests/jj.rs
info:
  program: wt
  args:
    - merge
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[32m✓[39m [32mPushed [1mmain[22m[39m
[32m✓[39m [32mSquashed workspace [1mfeature[22m into [1mmain[22m[39m
[32m✓[39m [32mRemoved workspace [1mfeature[22m @ [1m_REPO_.feature[22m ([CHANGE_ID_SHORT] of [1mmain[22m, [2m⊂[22m)[39m
